--- a/scss/prepros-6.config
+++ b/scss/prepros-6.config
@@ -46,7 +46,8 @@
     {
       "path": "common.scss",
       "imports": [
-        "buttonOverlay.scss"
+        "buttonOverlay.scss",
+        "textAnimationLeft.scss"
       ]
     },
     {
@@ -65,6 +66,7 @@
         "header.scss",
         "footer.scss",
         "buttonOverlay.scss",
+        "textRightLeft.scss",
         "accordion.scss",
         "scroll.scss"
       ]
