190623index.html javascript

--- a/scss/prepros-6.config
+++ b/scss/prepros-6.config
@@ -67,6 +67,7 @@
         "footer.scss",
         "buttonOverlay.scss",
         "textRightLeft.scss",
+        "lineThrough.scss",
         "accordion.scss",
         "scroll.scss"
       ]
