--- a/scss/prepros-6.config
+++ b/scss/prepros-6.config
@@ -68,6 +68,7 @@
         "buttonOverlay.scss",
         "textRightLeft.scss",
         "lineThrough.scss",
+        "buttonLeft.scss",
         "accordion.scss",
         "scroll.scss"
       ]
@@ -80,7 +81,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
